<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/barrierFooter"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pokemonImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:civ_border_color="@color/design_default_color_background"
            app:civ_border_width="3dp"
            app:civ_circle_background_color="@color/white" />

        <TextView
            android:id="@+id/pokemonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAllCaps="true"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/type"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pokemonType1"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_hp_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/hp"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_attack_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/attack"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_defense_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/defense"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_special_attack_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/special_attack"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_special_defense_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/special_defense"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/fragment_detail_speed_label"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/speed"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="64"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="cathPokemon,renamePokemon"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cathPokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catch_pokemon"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/renamePokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_pokemon"
        app:layout_constraintBottom_toTopOf="@+id/releasePokemon"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/releasePokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_pokemon"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>